--- a/index.html
+++ b/index.html
@@ -1,39 +1,82 @@
 <!DOCTYPE html>
-<html>
-    <head>
-	<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <title>Aero Client</title>
-	    <meta name="description" content="A free modpack for Minecraft 1.7.10">
-        <link rel="icon" href="favicon.ico">
-	    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-        <link href="page.css" rel="stylesheet">
-        <script src="preview.js"></script>
-    </head>
-    <img draggable="false" style="position: fixed;" class="background-img" src="assets/img/background.png">
-    <body>
-        <div class="pseudo-body">
-        <div id="header">
-            <div class="header-tabs">
-                <a href="https://aeroclient.net" class="tab">HOME</a>
-                <a href="/faq" class="tab">FAQ</a>
-                <a href="/punishments" class="tab">PUNISHMENTS</a>
-                <a href="/features" class="tab">FEATURES</a>
-                <a target="_blank" href="https://discord.aeroclient.net" class="tab">DISCORD</a>
-            </div>
-                <div id="home">
-                    <h4 class="text-1">Powered by CiCi Games</h4>
-                    <div id="centered-items" align="center">
-                    <img class="logo" src="assets/img/logo.png" draggable="false">
-                    <div id="name">
-                        <p class="name-1">AERO </p>
-                        <p class="name-2">CLIENT</p>
-                    </div>
-                    <p class="description">A Free FPS Boosting Modpack built for Minecraft 1.7.10. <br> <br> <b>The goal and mission of Aero Client is to create a non-toxic and safe playing environment.</b> <br> <br> Click the button below to get started!</p>
-                    <br>
-                    <a href="https://update.aeroclient.net" class="download-button">Download</a>
-                </div>
-            </div>
-        </div>
-    </body>
-</html>
+<!-- saved from url=(0025)https://cheatbreaker.xyz/ -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta property="og:image" content="https://cheatbreaker.xyz/v/images/logo.png">
+<meta name="description" content="CheatBreaker is Minecraft&#39;s original and free client-side anticheat that allows you to play the game the way it was meant to be played: fairly.">
+<title>CheatBreaker</title>
+<link rel="shortcut icon" href="https://cheatbreaker.xyz/assets/images/cb-logo-128x128.png" type="image/x-icon">
+<link rel="stylesheet" href="./CheatBreaker_files/bootstrap.min.css">
+<link rel="stylesheet" href="./CheatBreaker_files/main.css">
+<script src="./CheatBreaker_files/jquery.min.js.download" defer=""></script>
+<script>window.jQuery || document.write('<script src="../v/js/jquery-3.2.1.min.js" defer><\/script>')</script><script src="./CheatBreaker_files/jquery-3.2.1.min.js.download" defer=""></script>
+<script src="./CheatBreaker_files/popper.min.js.download" crossorigin="anonymous" defer=""></script>
+<script src="./CheatBreaker_files/bootstrap.min.js.download" crossorigin="anonymous" defer=""></script>
+<script src="https://www.cheatbreaker.com/v/js/jquery.main.js" defer=""></script>
+<link href="./CheatBreaker_files/font-awesome.min.css" rel="stylesheet">
+</head>
+<body class="home">
+<div class="w1">
+<div id="wrapper">
+<header id="header">
+<nav class="navbar navbar-expand-md navbar-light">
+<div class="logo"><a href="https://cheatbreaker.xyz/#"><img src="./CheatBreaker_files/header-logo.png" alt="CheatBreaker">CheatBreaker</a></div>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+<ul class="navbar-nav ml-auto">
+<li class="nav-item  active ">
+<a class="nav-link" href="https://cheatbreaker.xyz/#">Home</a>
+</li>
+<li class="nav-item ">
+<a class="nav-link" href="https://cheatbreaker.xyz/bans">Ban List</a>
+</li>
+<li class="nav-item ">
+<a class="nav-link" href="https://cheatbreaker.xyz/faq">F.A.Q.</a>
+</li>
+</ul>
+<a class="btn btn-light" href="https://cheatbreaker.xyz/files/CheatBreakerInstall.exe">DOWNLOAD</a>
+</div>
+</nav>
+</header>
+<main id="main">
+<div class="main-block">
+<div class="main-block-holder">
+<img src="./CheatBreaker_files/logo.png" alt="CheatBreaker">
+<h1>CheatBreaker</h1>
+<p>The <b>free</b> client-side anticheat for Minecraft</p>
+<strong class="press">PRESS THE DOWNLOAD BUTTON BELOW TO GET STARTED</strong>
+<a href="https://cheatbreaker.xyz/files/CheatBreakerInstall.exe" class="download"><span class="circle"><span><i class="icon-download"></i></span></span></a>
+</div>
+</div>
+</main>
+</div>
+<footer id="footer">
+<div class="footer-wrapper">
+<div class="container">
+<div class="row">
+<div class="col-md-12">
+<div class="holder">
+ <ul class="social-networks" style="list-style-type:none;margin:0;">
+<li><a href="https://twitter.com/CheatBreaker" target="_new"><i class="icon-twitter"></i></a></li>
+<li><a href="https://discord.cheatbreaker.com/" target="_new"><img src="./CheatBreaker_files/discord.svg"></a></li>
+</ul>
+<p class="copyright">© 2020 CheatBreaker. Not affiliated with FrozenOrb.</p>
+<ul class="sub-menu">
+<li><a href="https://cheatbreaker.xyz/terms">TERMS</a></li>
+<li><a href="https://cheatbreaker.xyz/privacy">PRIVACY POLICY</a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+</div>
+</footer>
+</div>
+<div class="bg-stretch bg-stretch-home">
+<span data-srcset="./v/images/cbonepagenobrowser.jpg, ./v/images/cbonepagenobrowser-2x.jpg 2x"></span>
+</div>
+
+</body></html>
